--- a/TestAutoNarrative/WebContent/WEB-INF/web.xml
+++ b/TestAutoNarrative/WebContent/WEB-INF/web.xml
@@ -7,6 +7,10 @@
   <filter>
     <filter-name>TimeOutFilter</filter-name>
     <filter-class>com.test.TimeOutFilter</filter-class>
+    <init-param>
+		<param-name>avoid-urls</param-name>
+		<param-value>login.jsp</param-value>
+	</init-param>
   </filter>
   <filter-mapping>
     <filter-name>TimeOutFilter</filter-name>
